force-app/main/default/objects/CTCPG__Activity__c/fields/AccountMatrixId__c.field-meta.xml
<CustomField>
	<fullName>AccountMatrixId__c</fullName>
	<formula>CASESAFEID( CTCPG__AccountId__r.MatrixId__r.Id )</formula>
	<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
	<label>AccountMatrixId</label>
	<type>Text</type>
</CustomField>