force-app/main/default/objects/CTCPG__Activity__c/fields/Confirmed_visit__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed visit</label>
    <type>Checkbox</type>
</CustomField>