force-app/main/default/objects/CTCPG__Activity__c/fields/CountActivityData__c.field-meta.xml
<CustomField>
    <fullName>CountActivityData__c</fullName>
    <label>Count Activity Data</label>
    <summaryFilterItems>
        <field>CTCPG__ActivityData__c.Obligatory__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>CTCPG__ActivityData__c.CTCPG__ActivityId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>