force-app/main/default/objects/CTCPG__Activity__c/fields/CountActivityDataFacing__c.field-meta.xml
<CustomField>
    <fullName>CountActivityDataFacing__c</fullName>
    <label>Count Activity Data + Facing</label>
    <summaryFilterItems>
        <field>CTCPG__ActivityData__c.Obligatory__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>CTCPG__ActivityData__c.Facing__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>CTCPG__ActivityData__c.CTCPG__ActivityId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>