force-app/main/default/objects/CTCPG__Activity__c/fields/DN__c.field-meta.xml
<CustomField>
    <fullName>DN__c</fullName>
    <label>DN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>