force-app/main/default/objects/CTCPG__Activity__c/fields/DN_Audit_Category_1__c.field-meta.xml
<CustomField>
    <fullName>DN_Audit_Category_1__c</fullName>
    <label>DN Audit Category 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>