force-app/main/default/objects/CTCPG__Activity__c/fields/DNFormula__c.field-meta.xml
<CustomField>
    <fullName>DNFormula__c</fullName>
    <formula>IF(  CountActivityData__c  =0,0,
 CountActivityDataFacing__c  /  CountActivityData__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DN Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>