force-app/main/default/objects/CTCPG__Activity__c/fields/EndGeolocation__c.field-meta.xml
<CustomField>
    <fullName>EndGeolocation__c</fullName>
    <label>End Geolocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>