force-app/main/default/objects/CTCPG__Activity__c/fields/EndOccurancyGeo__c.field-meta.xml
<CustomField>
    <fullName>EndOccurancyGeo__c</fullName>
    <label>End Geolocation Accuracy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>