force-app/main/default/objects/CTCPG__Activity__c/fields/FactDuration__c.field-meta.xml
<CustomField>
    <fullName>FactDuration__c</fullName>
    <formula>TEXT( 
FLOOR(MOD(( FactEndDate__c - FactStartDate__c )*24,24)) 
) &amp;&quot; h &quot; &amp; 
TEXT( 
ROUND(MOD((FactEndDate__c - FactStartDate__c)*1440,60),0) 
) &amp;&quot; min &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fact Duration</label>
    <type>Text</type>
</CustomField>