force-app/main/default/objects/CTCPG__Activity__c/fields/FactEndDate__c.field-meta.xml
<CustomField>
    <fullName>FactEndDate__c</fullName>
    <label>Fact End Date</label>
    <type>DateTime</type>
</CustomField>