force-app/main/default/objects/CTCPG__Activity__c/fields/FactStartDate__c.field-meta.xml
<CustomField>
    <fullName>FactStartDate__c</fullName>
    <label>Fact Start Date</label>
    <type>DateTime</type>
</CustomField>