force-app/main/default/objects/CTCPG__Activity__c/fields/GeoConfirmed__c.field-meta.xml
<CustomField>
    <fullName>GeoConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Geolocation Confirmed</label>
    <type>Checkbox</type>
</CustomField>