force-app/main/default/objects/CTCPG__Activity__c/fields/PDL__c.field-meta.xml
<CustomField>
    <fullName>PDL__c</fullName>
    <label>PDL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>