force-app/main/default/objects/CTCPG__Activity__c/fields/PDL_Audit_Category_3__c.field-meta.xml
<CustomField>
    <fullName>PDL_Audit_Category_3__c</fullName>
    <label>PDL Audit Category 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>