force-app/main/default/objects/CTCPG__Activity__c/fields/PDLFormula__c.field-meta.xml
<CustomField>
    <fullName>PDLFormula__c</fullName>
    <formula>IF( TotalShelfSpace__c=0,0,
TotalShelfSpace__c/ ShelfSpace__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDL Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>