force-app/main/default/objects/CTCPG__Activity__c/fields/RDLink__c.field-meta.xml
<CustomField>
    <fullName>RDLink__c</fullName>
    <description>CT Mobile RD Link</description>
    <label>RD Link</label>
    <type>Url</type>
</CustomField>