force-app/main/default/objects/CTCPG__Activity__c/fields/ShelfSpace__c.field-meta.xml
<CustomField>
    <fullName>ShelfSpace__c</fullName>
    <defaultValue>10000</defaultValue>
    <label>Shelf Space</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>