force-app/main/default/objects/CTCPG__Activity__c/fields/StartGeolocation__c.field-meta.xml
<CustomField>
    <fullName>StartGeolocation__c</fullName>
    <label>Start Geolocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>