force-app/main/default/objects/CTCPG__Activity__c/fields/StartOccurancyGeo__c.field-meta.xml
<CustomField>
    <fullName>StartOccurancyGeo__c</fullName>
    <label>Start Geolocation Accuracy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>