force-app/main/default/objects/CTCPG__Activity__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>ctmobile.combobox(Planned Visit,Unplanned visit,Meeting,Presentation)</description>
    <inlineHelpText>This field is for demonstration purposes only. It is shown as a combobox in CT Mobile.</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>