force-app/main/default/objects/CTCPG__Activity__c/fields/TotalShelfLength__c.field-meta.xml
<CustomField>
    <fullName>TotalShelfLength__c</fullName>
	<label>Total Shelf Length</label>
	<summarizedField>CTCPG__ActivityData__c.ShelfLength__c</summarizedField>
	<summaryForeignKey>CTCPG__ActivityData__c.CTCPG__ActivityId__c</summaryForeignKey>
	<summaryOperation>sum</summaryOperation>
	<type>Summary</type>
</CustomField>