force-app/main/default/objects/CTCPG__Activity__c/fields/TotalShelfSpace__c.field-meta.xml
<CustomField>
    <fullName>TotalShelfSpace__c</fullName>
    <label>Total Shelf Space</label>
    <summarizedField>CTCPG__ActivityData__c.largeur_du_produit_en_cm_num__c</summarizedField>
    <summaryForeignKey>CTCPG__ActivityData__c.CTCPG__ActivityId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>