force-app/main/default/objects/CTCPG__Activity__c/recordTypes/DemoAudit.recordType-meta.xml
<RecordType>
    <fullName>DemoAudit</fullName>
    <active>true</active>
    <label>Audit</label>
</RecordType>