force-app/main/default/objects/CTCPG__Activity__c/recordTypes/Mobile_DemoAudit.recordType-meta.xml
<RecordType>
    <fullName>Mobile_DemoAudit</fullName>
    <active>false</active>
    <label>Mobile Audit</label>
</RecordType>